--- a/templates/main.html
+++ b/templates/main.html
@@ -1,362 +1,4 @@
-<!--
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Window</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #f5f5f5;
-            margin: 0;
-            padding: 20px;
-        }
-        .container {
-            max-width: 1200px;
-            margin: auto;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-        .card {
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            margin: 10px;
-            padding: 20px;
-            width: 300px;
-            flex: 1 1 300px; /* Makes the card responsive */
-        }
-        h2 {
-            margin: 0;
-            font-weight: 500;
-        }
-        .dust-box-container {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 10px;
-        }
-        .dust-box {
-            flex: 1;
-            height: 60px;
-            background-color: lightgrey;
-            margin: 0 5px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 12px;
-            font-weight: bold;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        .dust-box:hover {
-            background-color: #e0e0e0;
-        }
-        .highlight {
-            background-color: #b3e5fc;
-        }
-        .door-status {
-            font-size: 18px;
-            margin-top: 20px;
-            text-align: center;
-        }
-        .door-icon {
-            font-size: 50px;
-            margin-top: 10px;
-        }
-        .open {
-            color: red;
-        }
-        .closed {
-            color: green;
-        }
-        .video-container {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-        }
-        img {
-            max-width: 100%;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-        button {
-            background-color: #6200ea;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            padding: 10px 15px;
-            cursor: pointer;
-            margin: 5px;
-            transition: background-color 0.3s;
-        }
-        button:hover {
-            background-color: #3700b3;
-        }
-        .form-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-    </style>
-    <script>
-        function updateSensorData() {
-            fetch('/get_sensor_data')
-            .then(response => response.json())
-            .then(data => {
-                // Update sensor values
-                document.getElementById('humidity_1').textContent = data.humidity_1 || 'N/A';
-                document.getElementById('temperature_1').textContent = data.temperature_1 || 'N/A';
-                document.getElementById('humidity_2').textContent = data.humidity_2 || 'N/A';
-                document.getElementById('temperature_2').textContent = data.temperature_2 || 'N/A';
-                document.getElementById('light_level').textContent = data.light_level || 'N/A';
-                document.getElementById('rain_level').textContent = data.rain_level || 'N/A';
-                document.getElementById('pm2_5').textContent = data.pm2_5 || 'N/A';
-                document.getElementById('discomfort_index_1').textContent = data.discomfort_index_1 || 'N/A';
-                document.getElementById('discomfort_index_2').textContent = data.discomfort_index_2 || 'N/A';
-                document.getElementById('status').textContent = data.status || '';
-
-                // Update the updated values display
-                document.getElementById('humidity_1_update').textContent = data.humidity_1 || 'N/A';
-                document.getElementById('temperature_1_update').textContent = data.temperature_1 || 'N/A';
-                document.getElementById('humidity_2_update').textContent = data.humidity_2 || 'N/A';
-                document.getElementById('temperature_2_update').textContent = data.temperature_2 || 'N/A';
-                document.getElementById('light_level_update').textContent = data.light_level || 'N/A';
-                document.getElementById('pm2_5_update').textContent = data.pm2_5 || 'N/A';
-
-                // Update PM2.5 boxes
-                var pmValue = parseInt(data.pm2_5, 10);
-                document.querySelectorAll('.dust-box').forEach(box => {
-                    box.classList.remove('highlight');
-                });
-                if (pmValue < 30) {
-                    document.getElementById('dust-btn-1').classList.add('highlight');
-                } else if (pmValue >= 50 && pmValue < 80) {
-                    document.getElementById('dust-btn-2').classList.add('highlight');
-                } else if (pmValue >= 80 && pmValue < 150) {
-                    document.getElementById('dust-btn-3').classList.add('highlight');
-                } else if (pmValue >= 150) {
-                    document.getElementById('dust-btn-4').classList.add('highlight');
-                }
-
-                // Update door status
-                var doorStatus = data.door_status;
-                if (doorStatus === 'door Opened') {
-                    document.getElementById('door-status').textContent = "창문이 열렸습니다!";
-                    document.getElementById('door-icon').textContent = "💨🚪";  // Opened door icon
-                    document.getElementById('door-icon').classList.add('open');
-                } else if (doorStatus === 'door Closed') {
-                    document.getElementById('door-status').textContent = "창문이 닫혔습니다.";
-                    document.getElementById('door-icon').textContent = "🚪";  // Closed door icon
-                    document.getElementById('door-icon').classList.add('closed');
-                } else {
-                    document.getElementById('door-status').textContent = "문 상태를 알 수 없습니다.";
-                    document.getElementById('door-icon').textContent = "❓";  // Neutral icon
-                }
-            })
-            .catch(error => console.error('Error fetching sensor data:', error));
-        }   
-
-
-        function initializePage() {
-            // Initial display of set values
-            updateInitialValues();
-
-            // Start updating sensor data after 1 minute
-            setTimeout(() => {
-                updateSensorData();
-                setInterval(updateSensorData, 60000);
-            }, 60000);
-        }
-
-        function updateInitialValues() {
-            document.getElementById('humidity_1').textContent = '{{ updated_settings["humidity"] if updated_settings else "50.0" }}';
-            document.getElementById('temperature_1').textContent = '{{ updated_settings["hot_temperature"] if updated_settings else "26.0" }}';
-            document.getElementById('humidity_2').textContent = '{{ updated_settings["humidity"] if updated_settings else "N/A" }}'; // 실내,실외 구분 요망
-            document.getElementById('temperature_2').textContent = '{{ updated_settings["cold_temperature"] if updated_settings else "24.0" }}';
-            document.getElementById('light_level').textContent = '{{ updated_settings["indoor_light"] if updated_settings else "400" }}';
-            document.getElementById('pm2_5').textContent = '{{ updated_settings["pm"] if updated_settings else "81" }}';
-
-            // Update PM2.5 boxes
-            var pmValue = parseInt(document.getElementById('pm2_5').textContent, 10);
-            document.querySelectorAll('.dust-box').forEach(box => {
-                box.classList.remove('highlight');
-            });
-            if (pmValue < 30) {
-                document.getElementById('dust-btn-1').classList.add('highlight');
-            } else if (pmValue >= 50 && pmValue < 80) {
-                document.getElementById('dust-btn-2').classList.add('highlight');
-            } else if (pmValue >= 80 && pmValue < 150) {
-                document.getElementById('dust-btn-3').classList.add('highlight');
-            } else if (pmValue >= 150) {
-                document.getElementById('dust-btn-4').classList.add('highlight');
-            }
-        }
-
-        document.addEventListener('DOMContentLoaded', initializePage);
-
-        // 초기 페이지 로드 시 카메라 데이터를 불러오는 함수
-        function loadCameraData() {
-            fetch('/get_cam_data')
-                .then(response => response.json())
-                .then(data => {
-                    if (data.error) {
-                        console.error('Error fetching camera data:', data.error);
-                        document.getElementById('camera-data-container').innerHTML = "<p>카메라 데이터를 불러오는 중 오류가 발생했습니다.</p>";
-                    } else {
-                        document.getElementById('camera-data-container').innerHTML = data.data;
-                    }
-                })
-                .catch(error => {
-                    console.error('Error fetching camera data:', error);
-                    document.getElementById('camera-data-container').innerHTML = "<p>카메라 데이터를 불러오는 중 오류가 발생했습니다.</p>";
-                });
-
-        }
-
-        // 페이지 로드 시 카메라 데이터 불러오기
-
-        function updateCAMData() {
-            fetch('/get_cam_detect_data')
-                .then(data => {
-                    document.getElementById('camera-data-containe') = data;
-                })
-                .catch(error => console.error('Error fetching detect data:', error));
-        }
-
-
-        function sendAction(action) {
-        if (action === 'WEATHER') {
-            fetch('/get_weather_data')
-                .then(response => response.json())
-                .then(data => {
-                    document.getElementById('weather-data').textContent = JSON.stringify(data) || 'N/A';
-                })
-                .catch(error => console.error('Error fetching weather data:', error));
-        } else if(action === 'CAMdata'){
-            fetch('/get_cam_data')
-                .then(response => response.json())
-                .then(data => {
-                    if (data.error) {
-                        console.error('Error fetching camera data:', data.error);
-                        document.getElementById('camera-data-container').innerHTML = "<p>카메라 데이터를 불러오는 중 오류가 발생했습니다.</p>";
-                    } else {
-                        document.getElementById('camera-data-container').innerHTML = data.data;
-                    }
-                })
-                .catch(error => {
-                    console.error('Error fetching camera data:', error);
-                    document.getElementById('camera-data-container').innerHTML = "<p>카메라 데이터를 불러오는 중 오류가 발생했습니다.</p>";
-                });
-        } else {
-            fetch('/', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/x-www-form-urlencoded'
-                },
-                body: new URLSearchParams({
-                    'button': action
-                })
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    console.log(`${action} action was successful`);
-                } else {
-                    console.error(`Failed to perform ${action} action`);
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-            });
-        }
-    }
-    </script>
-</head>
-<body>
-    <div class="container">
-        <div class="card">
-            <h2>현재 환경 모니터</h2>
-            <div style="display: flex;">
-                <div style="flex: 1; margin-right: 20px;">
-                    <h3>설정 값</h3>
-                    <div><strong>습도 1: </strong><span id="humidity_1">{{ updated_settings['humidity'] if updated_settings else 'N/A' }}</span></div>
-                    <div><strong>온도 1: </strong><span id="temperature_1">{{ updated_settings['hot_temperature'] if updated_settings else 'N/A' }}</span></div>
-                    <div><strong>습도 2: </strong><span id="humidity_2">{{ updated_settings['humidity'] if updated_settings else 'N/A' }}</span></div>
-                    <div><strong>온도 2: </strong><span id="temperature_2">{{ updated_settings['cold_temperature'] if updated_settings else 'N/A' }}</span></div>
-                    <div><strong>조도 레벨: </strong><span id="light_level">{{ updated_settings['indoor_light'] if updated_settings else 'N/A' }}</span></div>
-                    <div><strong>비 레벨: </strong><span id="rain_level">N/A</span></div>
-                    <div><strong>PM2.5 레벨: </strong><span id="pm2_5">{{ updated_settings['pm'] if updated_settings else 'N/A' }}</span></div>
-                    <div><strong>불쾌지수 1: </strong><span id="discomfort_index_1">N/A</span></div>
-                    <div><strong>불쾌지수 2: </strong><span id="discomfort_index_2">N/A</span></div>
-                    <div><strong>상태: </strong><span id="status">N/A</span></div>
-                </div>
-                <div style="flex: 1;">
-                    <h3>센서 값</h3>
-                    <div><strong>습도 1: </strong><span id="humidity_1_update">N/A</span></div>
-                    <div><strong>온도 1: </strong><span id="temperature_1_update">N/A</span></div>
-                    <div><strong>습도 2: </strong><span id="humidity_2_update">N/A</span></div>
-                    <div><strong>온도 2: </strong><span id="temperature_2_update">N/A</span></div>
-                    <div><strong>조도 레벨: </strong><span id="light_level_update">N/A</span></div>
-                    <div><strong>PM2.5 레벨: </strong><span id="pm2_5_update">N/A</span></div>
-                </div>
-            </div>
-            <div><strong>미세먼지 수치:</strong></div>
-            <div class="dust-box-container">
-                <div class="dust-box" id="dust-btn-1">매우 좋음</div>
-                <div class="dust-box" id="dust-btn-2">보통</div>
-                <div class="dust-box" id="dust-btn-3">나쁨</div>
-                <div class="dust-box" id="dust-btn-4">매우 나쁨</div>
-            </div>
-        </div>
-
-        <div class="card door-status">
-            <div id="door-status">문 상태를 알 수 없습니다.</div>
-            <div id="door-icon" class="door-icon">❓</div>
-        </div>
-
-        <div class="card">
-            <h2>기상청 날씨 데이터</h2>
-            
-            <div><span id="weather-data">N/A</span></div>
-        </div>
-
-        <div class="form-container card">
-            <p>값을 설정하시겠습니까?</p>
-            <form method="POST">
-                <button type="submit" name="button" value="Y">Y</button>
-                <button type="submit" name="button" value="N">N</button>
-            </form>
-            <p>부가 기능</p>
-            <form method="POST">
-                <button type="button" onclick="sendAction('OPEN')">창문 열기</button>
-                <button type="button" onclick="sendAction('CLOSE')">창문 닫기</button>
-                <button type="button" onclick="sendAction('WEATHER')" id="weather-button">날씨 api</button>
-            </form>
-            <p>카메라 관련 기능</p>
-            <form method="POST">
-                <button type="button" onclick="sendAction('CAMdata')">인식 정보</button>
-                <button type="button" onclick="sendAction('CAMwrite')">인식 시작</button>
-            </form>
-        </div>
-
-        <div id="camera-data-container" class="card">
-          
-        </div>
-
-        <div class="video-container">
-            <img src="{{ url_for('video_feed') }}" alt="Video Feed">
-        </div>
-    </div>
-</body>
-</html> -->
-
+<!--메인 컨트롤 화면-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
