--- a/templates/main.html
+++ b/templates/main.html
@@ -84,6 +84,7 @@
             max-width: 100%;
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            transform: scaleY(-1);
         }
         button {
             background-color: #6200ea;
@@ -167,8 +168,10 @@
             .then(response => response.json())
             .then(data => {
                 // Update sensor values
-                document.getElementById('humidity_1').textContent = data.humidity_1 || 'N/A';
-                document.getElementById('temperature_1').textContent = data.temperature_1 || 'N/A';})
+                document.getElementById('humidity_1_m').textContent = data.humidity_1 || 'N/A';
+                document.getElementById('temperature_1_m').textContent = data.temperature_1 || 'N/A';
+                document.getElementById('pm25_m').textContent = data.pm2_5 || 'N/A';
+             })
         }
         
         function updateSettingData() {
@@ -236,17 +239,23 @@
             // Start updating sensor data after 1 minute
             setTimeout(() => {
                 updateSensorData();
-                setInterval(updateSensorData, 60000);
-            }, 60000);
+                setInterval(updateSensorData, 10000);
+            }, 10000);
+            
+            // Start updating sensor data after 1 minute
+            setTimeout(() => {
+				updateMSEData();
+                setInterval(updateMSEData, 15000);
+            }, 15000);
         }
 
         function updateInitialValues() {
-            document.getElementById('humidity_1').textContent = '{{ updated_settings["humidity"] if updated_settings else "50.0" }}';
-            document.getElementById('temperature_1').textContent = '{{ updated_settings["hot_temperature"] if updated_settings else "26.0" }}';
+            document.getElementById('humidity_1').textContent = '{{ updated_settings["humidity"] if updated_settings else "N/A" }}';
+            document.getElementById('temperature_1').textContent = '{{ updated_settings["hot_temperature"] if updated_settings else "N/A" }}';
             document.getElementById('humidity_2').textContent = '{{ updated_settings["humidity"] if updated_settings else "N/A" }}'; // 실내,실외 구분 요망
-            document.getElementById('temperature_2').textContent = '{{ updated_settings["cold_temperature"] if updated_settings else "24.0" }}';
-            document.getElementById('light_level').textContent = '{{ updated_settings["indoor_light"] if updated_settings else "400" }}';
-            document.getElementById('pm2_5').textContent = '{{ updated_settings["pm"] if updated_settings else "81" }}';
+            document.getElementById('temperature_2').textContent = '{{ updated_settings["cold_temperature"] if updated_settings else "N/A" }}';
+            document.getElementById('light_level').textContent = '{{ updated_settings["indoor_light"] if updated_settings else "N/A" }}';
+            document.getElementById('pm2_5').textContent = '{{ updated_settings["pm"] if updated_settings else "N/A" }}';
 
             // Update PM2.5 boxes
             var pmValue = parseInt(document.getElementById('pm2_5').textContent, 10);
@@ -297,7 +306,7 @@
                     console.error('Error fetching camera data:', error);
                     document.getElementById('camera-data-container').innerHTML = "<p>카메라 데이터를 불러오는 중 오류가 발생했습니다.</p>";
                 });
-        } else {
+		} else {
             fetch('/', {
                 method: 'POST',
                 headers: {
@@ -329,30 +338,31 @@
             <div style="display: flex;">
                 <div style="flex: 1; margin-right: 20px;">
                     <h3>센서 값</h3>
-                    <div><strong>습도 1: </strong><span id="humidity_1_update">{{ updated_settings['humidity'] if updated_settings else 'N/A' }}</span></div>
-                    <div><strong>온도 1: </strong><span id="temperature_1_update">{{ updated_settings['hot_temperature'] if updated_settings else 'N/A' }}</span></div>
-                    <div><strong>습도 2: </strong><span id="humidity_2_update">{{ updated_settings['humidity'] if updated_settings else 'N/A' }}</span></div>
-                    <div><strong>온도 2: </strong><span id="temperature_2_update">{{ updated_settings['cold_temperature'] if updated_settings else 'N/A' }}</span></div>
-                    <div><strong>조도 레벨: </strong><span id="light_level_update">{{ updated_settings['indoor_light'] if updated_settings else 'N/A' }}</span></div>
+                    <div><strong>실외 습도: </strong><span id="humidity_1_update">{{ updated_settings['humidity'] if updated_settings else 'N/A' }}</span></div>
+                    <div><strong>실외 온도: </strong><span id="temperature_1_update">{{ updated_settings['hot_temperature'] if updated_settings else 'N/A' }}</span></div>
+                    <div><strong>실내 습도: </strong><span id="humidity_2_update">{{ updated_settings['humidity'] if updated_settings else 'N/A' }}</span></div>
+                    <div><strong>실내 온도: </strong><span id="temperature_2_update">{{ updated_settings['cold_temperature'] if updated_settings else 'N/A' }}</span></div>
+                    <div><strong>실내 조도: </strong><span id="light_level_update">{{ updated_settings['indoor_light'] if updated_settings else 'N/A' }}</span></div>
                     <div><strong>비 레벨: </strong><span id="rain_level">N/A</span></div>
-                    <div><strong>PM2.5 레벨: </strong><span id="pm2_5_update">{{ updated_settings['pm'] if updated_settings else 'N/A' }}</span></div>
-                    <div><strong>불쾌지수 1: </strong><span id="discomfort_index_1">N/A</span></div>
-                    <div><strong>불쾌지수 2: </strong><span id="discomfort_index_2">N/A</span></div>
+                    <div><strong>실외 PM2.5: </strong><span id="pm2_5_update">{{ updated_settings['pm'] if updated_settings else 'N/A' }}</span></div>
+                    <div><strong>실외 불쾌지수: </strong><span id="discomfort_index_1">N/A</span></div>
+                    <div><strong>실내 불쾌지수: </strong><span id="discomfort_index_2">N/A</span></div>
                     <div><strong>상태: </strong><span id="status">N/A</span></div>
                 </div>
                 <div style="flex: 1;">
                     <h3>설정 값</h3>
-                    <div><strong>습도 1: </strong><span id="humidity_1">N/A</span></div>
-                    <div><strong>온도 1: </strong><span id="temperature_1">N/A</span></div>
-                    <div><strong>습도 2: </strong><span id="humidity_2">N/A</span></div>
-                    <div><strong>온도 2: </strong><span id="temperature_2">N/A</span></div>
-                    <div><strong>조도 레벨: </strong><span id="light_level">N/A</span></div>
-                    <div><strong>PM2.5 레벨: </strong><span id="pm2_5">N/A</span></div>
+                    <div><strong>실외 습도: </strong><span id="humidity_1">N/A</span></div>
+                    <div><strong>실외 온도: </strong><span id="temperature_1">N/A</span></div>
+                    <div><strong>실내 습도: </strong><span id="humidity_2">50.0</span></div>
+                    <div><strong>실내 온도: </strong><span id="temperature_2">26</span></div>
+                    <div><strong>실내 조도: </strong><span id="light_level">60</span></div>
+                    <div><strong>실외 PM2.5: </strong><span id="pm2_5">10</span></div>
                 </div>
                 <div style="flex: 1;">
                     <h3>보정 값</h3>
-                    <div><strong>외부 습도: </strong><span id="humidity_1">N/A</span></div>
-                    <div><strong>외부 온도: </strong><span id="temperature_1">N/A</span></div>
+                    <div><strong>외부 습도: </strong><span id="humidity_1_m">N/A</span></div>
+                    <div><strong>외부 온도: </strong><span id="temperature_1_m">N/A</span></div>
+                    <div><strong>pm25: </strong><span id="pm25_m">N/A</span></div>
                 </div>
             </div>
             <div><strong>미세먼지 수치:</strong></div>
@@ -379,7 +389,7 @@
             <p>값을 설정하시겠습니까?</p>
             <form method="POST">
                 <button type="submit" name="button" value="Y">Y</button>
-                <button type="submit" name="button" value="N">N</button>
+                <button type="button" onclick="sendAction('N')">N</button>
             </form>
             <p>부가 기능</p>
             <form method="POST">
@@ -390,7 +400,6 @@
             <p>카메라 관련 기능</p>
             <form method="POST">
                 <button type="button" onclick="sendAction('CAMdata')">인식 정보</button>
-                <button type="button" onclick="sendAction('CAMwrite')">인식 시작</button>
             </form>
         </div>
 
