--- a/templates/main (1).html
+++ b/templates/main (1).html
@@ -616,12 +616,12 @@
         </h1>
         <nav class="menu-container">
           <ul class="menu">
-            <li><button onclick="sendAction('monitor')">현재 환경 모니터</button></li>
-            <li><button onclick="sendAction('set')">값 설정</button></li>
-            <li><button onclick="sendAction('door')">문 상태</button></li>
-            <li><button onclick="sendAction('weather')">기상청 날씨</button></li>
-            <li><button onclick="sendAction('camera')">카메라 정보</button></li>
-            <li><button onclick="sendAction('video')">비디오 정보</button></li>
+            <li><a href="{{ url_for('')}}">현재 환경 모니터</a></li>
+            <li><a href="{{ url_for('set')}}">값 설정</a></li>
+            <li><a href="{{ url_for('door')}}">문 상태</a></li>
+            <li><a href="{{ url_for('weather')}}">기상청 날씨</a></li>
+            <li><a href="{{ url_for('camera')}}">카메라 정보</a></li>
+            <li><a href="{{ url_for('video')}}">비디오 정보</a></li>
           </ul>
         </nav>
       </div>
