--- a/templates/main (1).html
+++ b/templates/main (1).html
@@ -604,6 +604,15 @@
             });
         }
       }
+
+      function loadContent(route) {
+    fetch(`/${route}`)
+      .then(response => response.text())
+      .then(html => {
+        document.getElementById('content').innerHTML = html;
+      })
+      .catch(error => console.error('Error loading content:', error));
+  }
     </script>
   </head>
   <body>
@@ -616,16 +625,17 @@
         </h1>
         <nav class="menu-container">
           <ul class="menu">
-            <li><a href="{{ url_for('')}}">현재 환경 모니터</a></li>
-            <li><a href="{{ url_for('set')}}">값 설정</a></li>
-            <li><a href="{{ url_for('door')}}">문 상태</a></li>
-            <li><a href="{{ url_for('weather')}}">기상청 날씨</a></li>
-            <li><a href="{{ url_for('camera')}}">카메라 정보</a></li>
-            <li><a href="{{ url_for('video')}}">비디오 정보</a></li>
+            <li><a href="#" onclick="loadContent('index')">현재 환경 모니터</a></li>
+            <li><a href="#" onclick="loadContent('set_')">값 설정</a></li>
+            <li><a href="#" onclick="loadContent('door_')">문 상태</a></li>
+            <li><a href="#" onclick="loadContent('weather_')">기상청 날씨</a></li>
+            <li><a href="#" onclick="loadContent('camera_')">카메라 정보</a></li>
+            <li><a href="#" onclick="loadContent('video_')">비디오 정보</a></li>
           </ul>
         </nav>
       </div>
     </header>
+    <div id="content"></div>
 
     <!-- 현재 환경 모니터 컨테이너 -->
     <div class="monitor-section">
