--- a/templates/main (1).html
+++ b/templates/main (1).html
@@ -604,15 +604,6 @@
             });
         }
       }
-
-      function loadContent(route) {
-    fetch(`/${route}`)
-      .then(response => response.text())
-      .then(html => {
-        document.getElementById('content').innerHTML = html;
-      })
-      .catch(error => console.error('Error loading content:', error));
-  }
     </script>
   </head>
   <body>
@@ -625,17 +616,16 @@
         </h1>
         <nav class="menu-container">
           <ul class="menu">
-            <li><a href="#" onclick="loadContent('index')">현재 환경 모니터</a></li>
-            <li><a href="#" onclick="loadContent('set_')">값 설정</a></li>
-            <li><a href="#" onclick="loadContent('door_')">문 상태</a></li>
-            <li><a href="#" onclick="loadContent('weather_')">기상청 날씨</a></li>
-            <li><a href="#" onclick="loadContent('camera_')">카메라 정보</a></li>
-            <li><a href="#" onclick="loadContent('video_')">비디오 정보</a></li>
+            <li><a href="monitor.html">현재 환경 모니터</a></li>
+            <li><a href="set.html">값 설정</a></li>
+            <li><a href="door.html">문 상태</a></li>
+            <li><a href="weather.html">기상청 날씨</a></li>
+            <li><a href="camera.html">카메라 정보</a></li>
+            <li><a href="video.html">비디오 정보</a></li>
           </ul>
         </nav>
       </div>
     </header>
-    <div id="content"></div>
 
     <!-- 현재 환경 모니터 컨테이너 -->
     <div class="monitor-section">
