--- a/templates/main.html
+++ b/templates/main.html
@@ -607,27 +607,8 @@
     </script>
   </head>
   <body>
-    <header>
-      <div class="header-container" style="position: relative">
-        <h1>
-          <a href="main.html" class="logo">
-            <img src="logo.jpg" class="logo.img" />
-          </a>
-        </h1>
-        <nav class="menu-container">
-          <ul class="menu">
-            <li onclick="sendAction('monitor')">현재 환경 모니터</li>
-            <li onclick="sendAction('set')">값 설정</li>
-            <li onclick="sendAction('door')">문 상태</li>
-            <li onclick="sendAction('weather')">기상청 날씨</li>
-            <li onclick="sendAction('camera')">카메라 정보</li>
-            <li onclick="sendAction('video')">비디오 정보</li>
-          </ul>
-        </nav>
-      </div>
-    </header>
 
-    <!-- 현재 환경 모니터 컨테이너 -->
+
     <div class="monitor-section">
         <h2>현재 환경 모니터</h2>
         <div class="status-section">
@@ -644,17 +625,17 @@
                 <tbody>
                     <tr>
                         <td>실외 습도</td>
-                        <td> <!-- 센서값 실외 습도 --> 
+                        <td> 
                             <div>
                                 <span id="humidity_1_update">{{ updated_settings['humidity'] if updated_settings else 'N/A' }}</span></div>
                         </td>
-                        <td> <!-- 설정값 실외 습도 --> 
+                        <td> 
                             <div>
                                 
                                 <span id="humidity_1">N/A</span>
                               </div>
                             </td>
-                        <td> <!-- 보정값 외부 습도 --> 
+                        <td> 
                             <div>
                                 
                                 <span id="humidity_1_m">N/A</span>
@@ -664,17 +645,17 @@
 
                     <tr>
                         <td>실외 온도</td>
-                        <td> <!-- 센서값 실외 온도 -->
+                        <td> 
                             <div>
                                 <span id="temperature_1_update">{{ updated_settings['hot_temperature'] if updated_settings else 'N/A' }}</span></div>
                         </td>
-                        <td> <!-- 설정값 실외 온도 -->
+                        <td> 
                             <div>
                                 
                                 <span id="temperature_1">N/A</span>
                               </div>
                         </td>
-                        <td> <!-- 보정값 외부 온도 -->
+                        <td> 
                             <div>
                                 
                                 <span id="temperature_1_m">N/A</span>
@@ -684,7 +665,7 @@
 
                     <tr>
                         <td>실내 습도</td>
-                        <td> <!-- 센서값 실내 습도 --> 
+                        <td> 
                             <div>
                                 <span id="humidity_2_update"
                                   >{{ updated_settings['humidity'] if updated_settings else 'N/A'
@@ -692,7 +673,7 @@
                                 >
                               </div>
                         </td>
-                        <td> <!-- 설정값 실내 습도 --> 
+                        <td> 
                             <div>
                                 <span id="humidity_2">50.0</span>
                               </div>
@@ -702,7 +683,7 @@
 
                     <tr>
                         <td>실내 온도</td>
-                        <td> <!-- 센서값 실내 온도 -->
+                        <td> 
                             <div>
                                 <span id="temperature_2_update"
                                   >{{ updated_settings['cold_temperature'] if updated_settings
@@ -710,7 +691,7 @@
                                 >
                               </div>
                         </td>
-                        <td> <!-- 설정값 실내 온도 -->
+                        <td> 
                             <div>
                                 <span id="temperature_2">26</span>
                               </div>
@@ -720,7 +701,7 @@
 
                     <tr>
                         <td>실내 조도</td>
-                        <td> <!-- 센서값 실내 조도 --> 
+                        <td> 
                             <div>
                                 <span id="light_level_update"
                                   >{{ updated_settings['indoor_light'] if updated_settings else
@@ -728,7 +709,7 @@
                                 >
                               </div>
                         </td>
-                        <td> <!-- 설정값 실내 조도 --> 
+                        <td> 
                             <div>
                                 <span id="light_level">60</span>
                               </div>
@@ -738,7 +719,7 @@
 
                     <tr>
                         <td>비 레벨</td>
-                        <td> <!-- 센서값 비 레벨 --> 
+                        <td>  
                             <div>
                                 <span id="rain_level">N/A</span>
                               </div>
@@ -751,7 +732,7 @@
 
                     <tr>
                         <td>실외 PM 2.5 레벨</td>
-                        <td> <!-- 센서값 실외 PM 2.5 레벨 --> 
+                        <td> 
                             <div>
                                 <span id="pm2_5_update"
                                   >{{ updated_settings['pm'] if updated_settings else 'N/A'
@@ -759,11 +740,11 @@
                                 >
                               </div>
                         </td>
-                        <td> <!-- 설정값 실외 PM 2.5 레벨 --> 
+                        <td> 
                             <div><span id="pm2_5">10</span></div>
           </div>
                             </td>
-                            <td> <!-- 보정값 PM 2.5 레벨 -->
+                            <td> 
                                 <div><span id="pm25_m">N/A</span></div>
           </div>
                             </td>
@@ -771,12 +752,12 @@
 
                     <tr>
                         <td>실외 불쾌지수</td>
-                        <td> <!-- 센서값 실외 불쾌지수 --> 
+                        <td> 
                             <div>
                                 <span id="discomfort_index_1">N/A</span>
                               </div>
                         </td>
-                        <td> <!-- 설정값 불쾌지수 1 --> 
+                        <td> 
                             
                             </td>
                             <td></td>
@@ -784,12 +765,12 @@
 
                     <tr>
                         <td>실내 불쾌지수</td>
-                        <td> <!-- 센서값 실내 불쾌지수 --> 
+                        <td> 
                             <div>
                                 <span id="discomfort_index_2">N/A</span>
                               </div>
                         </td>
-                        <td> <!-- 설정값 불쾌지수 2 --> 
+                        <td>  
                             
                             </td>
                             <td></td>
@@ -797,7 +778,7 @@
 
                     <tr>
                         <td>상태</td>
-                        <td colspan='3'> <!-- 센서값 상태 --> 
+                        <td colspan='3'>  
                             <div><span id="status">N/A</span></div>
           </div>
                         </td>
@@ -822,7 +803,7 @@
 </div>
     
     <div class='container'>
-        <!-- 값 설정 컨테이너 -->
+     
       <div class="form-container card">
         <p>값을 설정하시겠습니까?</p>
         <form method="POST">
@@ -849,7 +830,7 @@
         </form>
       </div>
 
-      <!-- 문 상태 컨테이너 -->
+   
       <div class="card door-status">
         <div id="door-status">문 상태를 알 수 없습니다.</div>
         <div id="door-icon" class="door-icon">
@@ -867,20 +848,20 @@
         </div>
       </div>
 
-      <!-- 기상청 날씨 데이터 컨테이너 -->
+    
       <div class="card">
         <h2>기상청 날씨 데이터</h2>
-        <!--데이터 들어올 자리-->
+      
         <div><span id="weather-data">N/A</span></div>
       </div>
     </div>
 
-      <!-- 카메라 정보 컨테이너 -->
+   
       <div class="card" id="camera-data-container">
       </div>
     
 
-      <!-- 비디오 컨테이너 -->
+ 
       <div class="card" id="video-container">
         <img src="{{ url_for('video_feed') }}" alt="Video Feed" />
       </div>
